# python-for-data-analysts-project-100

./: .env  Makefile  README.md  ads.csv  ads.json  charts_project.ipynb  conversion.json  main.py  out.json  pyproject.toml  tools.py  Главное.docx
.ipynb_checkpoints/: ads-checkpoint.json
charts_project/: main.py  tools.py
charts_project/data/: ads.csv
data/: ads.csv
hexlet-code/: main.py
