[tool.poetry]
name = "first"
version = "0.1.0"
description = "My first poetry project"
authors = ["Vugar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.1"
numpy = "^1.24.3"
matplotlib = "^3.8.0"
requests = "2.31.0"
dotenv = "^0.21.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
