[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
requests = "^2.27.1"
python-dotenv = "^0.21.0"

[tool.poetry.scripts]
main = "main:run_all"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
